# python-project-poetry

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
